YAML directive checking